src/test/ui/implied-bounds/compare-impl-method-projections.stderr
warning: unnecessary lifetime parameter `'a`
  --> $DIR/compare-impl-method-projections.rs:33:13
   |
LL |             'a: 'static,
   |             ^^
   |
   = help: you can use the `'static` lifetime directly, in place of `'a`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/compare-impl-method-projections.rs:19:13
   |
LL |     fn get();
   |     --------- definition of `get` from trait
...
LL |         'b: 'a,
   |             ^^ impl has extra requirement `'b: 'a`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/compare-impl-method-projections.rs:33:17
   |
LL |         fn extend(self) -> &'static str;
   |         -------------------------------- definition of `extend` from trait
...
LL |             'a: 'static,
   |                 ^^^^^^^ impl has extra requirement `'a: 'static`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0276`.
